Update project configuration and enhance SEO metadata

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,10 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="The primary goal of the 9ja Market API is to create a seamless and efficient online marketplace experience for both customers and market administrators. The API is designed to handle high traffic, ensure data security, and provide a user-friendly interface for managing marketplace operations."
+    />
+    <meta property="og:title" content="9ja Market" />
+    <meta
+      property="og:description"
+      content="The primary goal of the 9ja Market API is to create a seamless and efficient online marketplace experience for both customers and market administrators. The API is designed to handle high traffic, ensure data security, and provide a user-friendly interface for managing marketplace operations."
+    />
+    <meta property="og:image" content="/meta-preview.jpg" />
+    <meta name="twitter:title" content="9ja Market" />
+    <meta
+      name="twitter:description"
+      content="The primary goal of the 9ja Market API is to create a seamless and efficient online marketplace experience for both customers and market administrators. The API is designed to handle high traffic, ensure data security, and provide a user-friendly interface for managing marketplace operations."
+    />
+    <meta name="twitter:image" content="/meta-preview.jpg" />
+    <title>9ja Market</title>
   </head>
   <body>
     <div id="root"></div>
