--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="The primary goal of the 9ja Market API is to create a seamless and efficient online marketplace experience for both customers and market administrators. The API is designed to handle high traffic, ensure data security, and provide a user-friendly interface for managing marketplace operations."
+      content="9ja Market is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
     />
     <meta property="og:title" content="9ja Market" />
     <meta
       property="og:description"
-      content="The primary goal of the 9ja Market API is to create a seamless and efficient online marketplace experience for both customers and market administrators. The API is designed to handle high traffic, ensure data security, and provide a user-friendly interface for managing marketplace operations."
+      content="9ja Market is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
     />
     <meta property="og:image" content="/meta-preview.jpg" />
     <meta name="twitter:title" content="9ja Market" />
     <meta
       name="twitter:description"
-      content="The primary goal of the 9ja Market API is to create a seamless and efficient online marketplace experience for both customers and market administrators. The API is designed to handle high traffic, ensure data security, and provide a user-friendly interface for managing marketplace operations."
+      content="9ja Market is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
     />
     <meta name="twitter:image" content="/meta-preview.jpg" />
     <title>9ja Market</title>
