--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -21,7 +21,8 @@
       content="9ja Market is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
     />
     <meta name="twitter:image" content="/meta-preview.jpg" />
-    <title>9ja Market</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>9jamarket</title>
   </head>
   <body>
     <div id="root"></div>
