Updated the (how it works page), addressed condtional rendering of role specific features

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,22 +7,22 @@
 
     <meta
       name="description"
-      content="9ja Market is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
+      content="9jamarkets is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
     />
-    <meta property="og:title" content="9ja Market" />
+    <meta property="og:title" content="9jamarkets" />
     <meta
       property="og:description"
-      content="9ja Market is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
+      content="9jamarkets is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
     />
     <meta property="og:image" content="/meta-preview.jpg" />
-    <meta name="twitter:title" content="9ja Market" />
+    <meta name="twitter:title" content="9jamarkets" />
     <meta
       name="twitter:description"
-      content="9ja Market is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
+      content="9jamarkets is an online platform to create a seamless and efficient online marketplace experience for both customers and market administrators."
     />
     <meta name="twitter:image" content="/meta-preview.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>9jamarket</title>
+    <title>9jamarkets</title>
   </head>
   <body>
     <div id="root"></div>
